Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

typedef void ( _VI_FUNCH _VI_PTR terM9_InterruptHandler )
        (ViInt32 interrupt, ViChar _VI_FAR addlInfo[]);
typedef terM9_InterruptHandler * terM9_PInterruptHandler;
ViStatus _VI_FUNC terM9_getInterruptHandler (ViSession vi, terM9_PInterruptHandler
                              interruptHandler);
ViStatus _VI_FUNC terM9_setInterruptHandler (ViSession vi, terM9_InterruptHandler
                              interruptHandler);
ViStatus _VI_FUNC terM9_close (ViSession vi);
ViStatus _VI_FUNC terM9_error_message (ViSession vi, ViStatus statusCode, ViChar
                              _VI_FAR message[]);
ViStatus _VI_FUNC terM9_error_query (ViSession vi, ViPInt32 errorCode, ViChar
                              _VI_FAR errorMessage[]);
ViStatus _VI_FUNC terM9_errorMessage (ViSession vi, ViStatus statusCode, ViChar
                              _VI_FAR message[]);
ViStatus _VI_FUNC terM9_errorQuery (ViSession vi, ViPInt32 errorCode, ViChar
                              _VI_FAR errorMessage[]);
ViStatus _VI_FUNC terM9_executeChannelAlignment (ViSession vi, ViPInt32
                              alignmentResult);
ViStatus _VI_FUNC terM9_executeDiagnosticSelfTest (ViSession vi, ViPInt32
                              testResult, ViChar _VI_FAR testMessage[]);
ViStatus _VI_FUNC terM9_executeProbeAlignment (ViSession vi, ViPInt32
                              alignmentResult);
ViStatus _VI_FUNC terM9_executeSyncResourceAlignment (ViSession vi, ViPInt32
                              alignmentResult);
ViStatus _VI_FUNC terM9_executeSystemAlignment (ViSession vi, ViPInt32
                              alignmentResult);
ViStatus _VI_FUNC terM9_executeUserClockAlignment (ViSession vi, ViPInt32
                              alignmentResult);
ViStatus _VI_FUNC terM9_fetchChannelAlignmentResult (ViSession vi, ViPInt32
                              alignmentResult, ViChar _VI_FAR
                              alignmentMessage[]);
ViStatus _VI_FUNC terM9_fetchProbeAlignmentResult (ViSession vi, ViPInt32
                              alignmentResult, ViChar _VI_FAR
                              alignmentMessage[]);
ViStatus _VI_FUNC terM9_fetchSyncResourceAlignmentResult (ViSession vi, ViPInt32
                              alignmentResult, ViChar _VI_FAR
                              alignmentMessage[]);
ViStatus _VI_FUNC terM9_fetchSystemAlignmentResult (ViSession vi, ViPInt32
                              alignmentResult, ViChar _VI_FAR
                              alignmentMessage[]);
ViStatus _VI_FUNC terM9_fetchUserClockAlignmentResult (ViSession vi, ViPInt32
                              alignmentResult, ViChar _VI_FAR
                              alignmentMessage[]);
ViStatus _VI_FUNC terM9_getBoardInformation (ViSession vi, ViInt32 cardIndex,
                              ViInt32 boardIndex, ViPInt32 boardId, ViChar
                              _VI_FAR boardNum[], ViChar _VI_FAR boardName[],
                              ViChar _VI_FAR boardRev[], ViChar _VI_FAR
                              boardSerial[], ViChar _VI_FAR addlInfo[]);
ViStatus _VI_FUNC terM9_getCardInformation (ViSession vi, ViInt32 cardIndex,
                              ViPInt32 cardId, ViChar _VI_FAR cardName[],
                              ViPInt32 boardCount, ViPInt32 chanCount, ViPInt32
                              chassis, ViPInt32 slot, ViChar _VI_FAR
                              addlInfo[]);
ViStatus _VI_FUNC terM9_getChannelInformation (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 cardIndex, ViPInt32 channelNumber,
                              ViPInt32 channelIndex);
ViStatus _VI_FUNC terM9_getLastFrontPanelSyncResourceIndex (ViSession vi,
                              ViPInt32 lastSyncResourceIndex);
ViStatus _VI_FUNC terM9_getLastHighVoltagePinIndex (ViSession vi, ViPInt32
                              lastHVPinIndex);
ViStatus _VI_FUNC terM9_getLastLevelIndex (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 lastLevelIndex);
ViStatus _VI_FUNC terM9_getLastPatternIndex (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 lastPatternIndex);
ViStatus _VI_FUNC terM9_getLastPhaseIndex (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 lastPhaseIndex);
ViStatus _VI_FUNC terM9_getLastProbeTimingSetIndex (ViSession vi, ViPInt32
                              lastPSETIndex);
ViStatus _VI_FUNC terM9_getLastResultIndex (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 lastResultIndex);
ViStatus _VI_FUNC terM9_getLastStepIndex (ViSession vi, ViPInt32 lastStepIndex);
ViStatus _VI_FUNC terM9_getLastTimingSetIndex (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 lastTSETIndex);
ViStatus _VI_FUNC terM9_getLastUserClockIndex (ViSession vi, ViPInt32
                              lastUserClockIndex);
ViStatus _VI_FUNC terM9_getLastWindowIndex (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 lastWindowIndex);
ViStatus _VI_FUNC terM9_getSystemInformation (ViSession vi, ViChar _VI_FAR
                              systemDesc[], ViPInt32 cardCount, ViPInt32
                              channelCount);
ViStatus _VI_FUNC terM9_initializeInstrument (ViSession vi);
ViStatus _VI_FUNC terM9_reset (ViSession vi);
ViStatus _VI_FUNC terM9_resetHighVoltagePins (ViSession vi);
ViStatus _VI_FUNC terM9_resetProbe (ViSession vi);
ViStatus _VI_FUNC terM9_revision_query (ViSession vi, ViChar _VI_FAR
                              driverRev[], ViChar _VI_FAR instrRev[]);
ViStatus _VI_FUNC terM9_revisionQuery (ViSession vi, ViChar _VI_FAR driverRev[],
                              ViChar _VI_FAR instrRev[]);
ViStatus _VI_FUNC terM9_self_test (ViSession vi, ViPInt32 testResult, ViChar
                              _VI_FAR testMessage[]);
ViStatus _VI_FUNC terM9_selfTest (ViSession vi, ViPInt32 testResult, ViChar
                              _VI_FAR testMessage[]);
ViStatus _VI_FUNC terM9_setTimer (ViSession vi, ViReal64 waitTime);
ViStatus _VI_FUNC terM9_startTimer (ViSession vi);
ViStatus _VI_FUNC terM9_stopTimer (ViSession vi);
ViStatus _VI_FUNC terM9_testTimer (ViSession vi, ViPBoolean timerDone);
ViStatus _VI_FUNC terM9_wait (ViSession vi, ViReal64 waitTime);
ViStatus _VI_FUNC terM9_waitForTimer (ViSession vi);