Source/Core/Source/System/TPExec_TETS/Source/TERM9.vb


    Declare Function terM9_selfTest Lib "terM9_32.dll" (ByVal vi As Integer, ByRef testResult As Integer, ByVal testMessage As String) As Integer
    Declare Function terM9_self_test Lib "terM9_32.dll" (ByVal vi As Integer, ByRef testResult As Integer, ByVal testMessage As String) As Integer

    Declare Function terM9_executeDiagnosticSelfTest Lib "terM9_32.dll" (ByVal vi As Integer, ByRef testResult As Integer, ByVal testMessage As String) As Integer

    Declare Function terM9_errorQuery Lib "terM9_32.dll" (ByVal vi As Integer, ByRef errorcode As Integer, ByVal errorMessage As String) As Integer
    Declare Function terM9_error_query Lib "terM9_32.dll" (ByVal vi As Integer, ByRef errorcode As Integer, ByVal errorMessage As String) As Integer

    Declare Function terM9_errorMessage Lib "terM9_32.dll" (ByVal vi As Integer, ByVal statusCode As Integer, ByVal Message As String) As Integer
    Declare Function terM9_error_message Lib "terM9_32.dll" (ByVal vi As Integer, ByVal statusCode As Integer, ByVal Message As String) As Integer

    Declare Function terM9_revisionQuery Lib "terM9_32.dll" (ByVal vi As Integer, ByVal driverRev As String, ByVal instrumentRev As String) As Integer
    Declare Function terM9_revision_query Lib "terM9_32.dll" (ByVal vi As Integer, ByVal driverRev As String, ByVal instrumentRev As String) As Integer

    Declare Function terM9_initializeInstrument Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_reset Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_resetHighVoltagePins Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_resetProbe Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_executeSystemAlignment Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer) As Integer

    Declare Function terM9_executeChannelAlignment Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer) As Integer

    Declare Function terM9_executeSyncResourceAlignment Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer) As Integer

    Declare Function terM9_executeUserClockAlignment Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer) As Integer

    Declare Function terM9_executeProbeAlignment Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer) As Integer

    Declare Function terM9_fetchSystemAlignmentResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer, ByVal alignmentMessage As String) As Integer

    Declare Function terM9_fetchChannelAlignmentResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer, ByVal alignmentMessage As String) As Integer

    Declare Function terM9_fetchSyncResourceAlignmentResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer, ByVal alignmentMessage As String) As Integer

    Declare Function terM9_fetchUserClockAlignmentResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer, ByVal alignmentMessage As String) As Integer

    Declare Function terM9_fetchProbeAlignmentResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef alignmentResult As Integer, ByVal alignmentMessage As String) As Integer

    Declare Function terM9_getSystemInformation Lib "terM9_32.dll" (ByVal vi As Integer, ByVal systemDesc As String, ByRef cardCount As Integer, ByRef channelCount As Integer) As Integer

    Declare Function terM9_getCardInformation Lib "terM9_32.dll" (ByVal vi As Integer, ByVal cardIdx As Integer, ByRef cardId As Integer, ByVal cardName As String, ByRef boardCount As Integer, ByRef chanCount As Integer, ByRef chassis As Integer, ByRef slot As Integer, ByVal addlInfo As String) As Integer

    Declare Function terM9_getBoardInformation Lib "terM9_32.dll" (ByVal vi As Integer, ByVal cardIdx As Integer, ByVal boardIdx As Integer, ByRef boardId As Integer, ByVal boardNum As String, ByVal boardName As String, ByVal boardRev As String, ByVal boardSerial As String, ByVal addlInfo As String) As Integer

    Declare Function terM9_getChannelInformation Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef cardIdx As Integer, ByRef ChannelNumber As Integer, ByRef channelIdx As Integer) As Integer

    Declare Function terM9_getLastPatternIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef lastPatternIdx As Integer) As Integer

    Declare Function terM9_getLastResultIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef lastResultIdx As Integer) As Integer

    Declare Function terM9_getLastTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef lastTSETIdx As Integer) As Integer

    Declare Function terM9_getLastPhaseIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef lastPhaseIdx As Integer) As Integer

    Declare Function terM9_getLastWindowIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef lastWindowIdx As Integer) As Integer

    Declare Function terM9_getLastLevelIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef lastLevelIdx As Integer) As Integer

    Declare Function terM9_getLastProbeTimingSetIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef lastPSETIdx As Integer) As Integer

    Declare Function terM9_getLastFrontPanelSyncResourceIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef lastSyncResourceIdx As Integer) As Integer

    Declare Function terM9_getLastStepIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef lastStepIdx As Integer) As Integer

    Declare Function terM9_getLastHighVoltagePinIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef lastHVPinIdx As Integer) As Integer

    Declare Function terM9_getLastUserClockIndex Lib "terM9_32.dll" (ByVal vi As Integer, ByRef lastUserClockIdx As Integer) As Integer

    Declare Function terM9_getInterruptHandler Lib "terM9_32.dll" (ByVal vi As Integer, ByRef interruptHandler As Integer) As Integer

    Declare Function terM9_setInterruptHandler Lib "terM9_32.dll" (ByVal vi As Integer, ByVal interruptHandler As Integer) As Integer

    Declare Function terM9_wait Lib "terM9_32.dll" (ByVal vi As Integer, ByVal waittime As Double) As Integer

    Declare Function terM9_setTimer Lib "terM9_32.dll" (ByVal vi As Integer, ByVal waittime As Double) As Integer

    Declare Function terM9_startTimer Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_waitForTimer Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_testTimer Lib "terM9_32.dll" (ByVal vi As Integer, ByRef timerDone As Short) As Integer

    Declare Function terM9_stopTimer Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_close Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    ' terM9_errors.h
